fixed slideshow photo alignment bug

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -53,17 +53,21 @@ nav {
   border-radius: 2px;
   transition: visibility .4s 0s, opacity .4s, width .4s .4s;
   overflow: hidden;
+  display: flex;
+  align-items: center;
 }
 #imageSpot {
   height: 100%;
   width: 100%;
   display: flex;
   margin: auto;
+  align-items: center;
+  justify-content: center;
 }
 #imageSpot img {
   width: 90%;
   height: auto;
-  margin: auto;
+  margin: none;
   box-shadow: 1px 2px 10px 1px rgb(59, 59, 59);
 }
 #arrowOverlay {
